# hewa

./: Cargo.toml  README.md
src/: main.rs
src/functions/: table.rs
src/structs/: weather.rs
